[package]
name = "draw-read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocrs = "0.8.0"
image = {version = "0.25.1", features=["bmp"]}
xcap = "0.0.10"
rten = "*"
rten-imageproc = "*"
mouse_position = "0.1.4"
tts = "0.26.1"
iced = { version = "0.12.1", features = ["advanced", "image"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
embed-manifest = "*"