#   draw-read is an accessibility tool that reads words on screen and tries to speak them aloud
#   Copyright (C) 2024 agaeki
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <https://www.gnu.org/licenses/>.


[package]
name = "draw-read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocrs = "0.8.0"
image = {version = "0.25.1", features=["bmp"]}
xcap = "0.0.10"
rten = "*"
rten-imageproc = "*"
mouse_position = "0.1.4"
tts = "0.26.1"
iced = { version = "0.12.1", features = ["advanced", "image"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[build-dependencies]
embed-manifest = "*"